fix #head-tag-ghost-container from overlapping the home search bar on xs screen.
made logo-home-md.png work on url('/')

--- a/public/scss/home.scss
+++ b/public/scss/home.scss
@@ -114,10 +114,13 @@
   width: 100%;
   margin-top: 100px;
   margin-bottom: 30px;
+  text-shadow: $text-shadow;
   @media(max-width: 991px){
     margin-top: 30px;
   }
-  text-shadow: $text-shadow;
+  @media(max-width: 767px){
+    z-index: 0;
+  }
 }
 
 #head1{
